--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "author": "Marcos Alves <limafilhoguerreiro@outlook.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.3",
-    "typescript": "*",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
+    "typescript": "*"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "test": "jest"
+  }
 }
