--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "*"
   },
   "dependencies": {},
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   }
 }
