--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "husky": "^8.0.2",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "ts-jest": "^29.0.3",
@@ -23,6 +23,7 @@
   "dependencies": {},
   "scripts": {
     "test": "jest",
-    "test:staged": "jest"
+    "test:staged": "jest",
+    "prepare": "husky install"
   }
 }
