--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "devDependencies": {
     "@types/jest": "29.2.3",
     "@types/node": "18.11.9",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
     "eslint": "8.0.1",
     "eslint-config-standard-with-typescript": "23.0.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-n": "15.0.0",
     "eslint-plugin-promise": "6.0.0",
-    "@typescript-eslint/parser": "5.0.0",
     "husky": "8.0.0",
     "jest": "29.3.1",
     "lint-staged": "13.0.3",
@@ -30,5 +31,8 @@
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
     "prepare": "husky install"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
