feat: ensure BcryptAdapter calls bcrypt with correct values

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "validator": "^13.7.0"
   }
 }
