--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
     "@types/jest": "29.2.3",
     "@types/mongodb": "^4.0.7",
     "@types/node": "18.11.9",
@@ -20,11 +22,13 @@
     "husky": "8.0.0",
     "jest": "29.3.1",
     "lint-staged": "13.0.3",
+    "sucrase": "^3.29.0",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "*"
   },
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:watch": "yarn test --watch",
@@ -35,8 +39,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "^4.12.1",
     "validator": "^13.7.0"
   }
