--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "Marcos Alves <limafilhoguerreiro@outlook.com>",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.3",
     "@types/bcrypt": "^5.0.0",
@@ -11,6 +12,7 @@
     "@types/jest": "29.2.3",
     "@types/mongodb": "^4.0.7",
     "@types/node": "18.11.9",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
@@ -23,6 +25,7 @@
     "jest": "29.3.1",
     "lint-staged": "13.0.3",
     "sucrase": "^3.29.0",
+    "supertest": "^6.3.1",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "*"
@@ -33,7 +36,7 @@
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:watch": "yarn test --watch",
     "test:unit": "yarn test -c jest-unit-config.js",
-    "test:integration": "yarn test -c jest-integration-config.js",
+    "test:integration": "yarn test -c jest-integration-config.ts --watch",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
     "prepare": "husky install"
